adjust board js imports

--- a/src/board.html
+++ b/src/board.html
@@ -9,8 +9,8 @@
     <!--jquery and mustache-->
     <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/node_modules/mustache/mustache.min.js"></script>
-    <script type="text/javascript" src="/js/board.js"></script>
-    <script type="text/javascript" src="/js/exec.js"></script>
+    <script type="module" src="/js/board.js"></script>
+    <script type="module" src="/js/exec.js"></script>
     <link rel="icon" type="image/x-icon" href="/images/logo.png">
 </head>
 <body>
