add cdn imports and udpate js import statements

--- a/src/board.html
+++ b/src/board.html
@@ -9,6 +9,8 @@
     <!--jquery and mustache-->
     <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/node_modules/mustache/mustache.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.3.1/mustache.min.js"></script>
     <script type="module" src="/js/board.js"></script>
     <script type="module" src="/js/exec.js"></script>
     <link rel="icon" type="image/x-icon" href="/images/logo.png">
