--- a/src/board.html
+++ b/src/board.html
@@ -8,9 +8,11 @@
     <!--comfortaa font-->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
     <!--jquery and mustache-->
-    <script type="module" src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <!-- <script type="module" src="/node_modules/jquery/dist/jquery.min.js"></script> -->
+    <!-- <script type="javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="module" src="/node_modules/mustache/mustache.min.js"></script>
-    <script type="javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="module" src="/js/board.js"></script>
     <script type="module" src="/js/exec.js"></script>
     <link rel="icon" type="image/x-icon" href="/images/logo.png">
