add footer to main page oops

--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
             <iframe style="margin-left: 330px;" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FChicago&title=CLAID%20Events!&src=OGVmZWJkMDI5OWM1MjE5YWM3MjQxZDE3MzNlYjU2NmMwMTg3MmQzMzBiZmU0MTc0NGY0NjQ3ZWNmODEwYmEwZkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23E4C441" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
+    <br>
+    <br>
+    <footer>
+        <p class="ftext" style="float:left;">claid @ uiuc</p>
+        <p class="ftext" style="float:right; margin-right: 30px;">Contact Us</p>
+      </footer>
     </body>
 </html>
