--- a/src/get_involved.html
+++ b/src/get_involved.html
@@ -18,6 +18,10 @@
         <li class="nav"><a class="nav" href="points.html">Points</a></li>
     </ul>
 
+    <!-- include chinese corner, being a tutor or learner in our 1:1 program
+        being a choreographer or performer for our CNY showcase, or simply coming to events-->
+
+
     <footer>
         <p class="ftext" style="float:left;">claid @ uiuc</p>
         <p class="ftext" style="float:right; margin-right: 30px;">Contact Us</p>
