contact form update

--- a/src/connect.html
+++ b/src/connect.html
@@ -39,7 +39,7 @@
     <h2 class="headers">Or contact us here!</h2>
     <br>
     <div>
-        <form role="form" value = "Refresh" onclick="history.go(0)">
+        <form method="post" action="contact.php">
             <div style="display: flex; margin-left: 530px;">
                 <div style="padding-right: 50px;">
                     <p class="formtext" style="flex: 25%;"><label for="name">Name</label></p>
