--- a/src/connect.html
+++ b/src/connect.html
@@ -39,7 +39,7 @@
     <h2 class="headers">Or contact us here!</h2>
     <br>
     <div>
-        <form method="post" action="contact.php">
+        <form method="post" action="https://formspree.io/f/mqkonnbr">
             <div style="display: flex; margin-left: 530px;">
                 <div style="padding-right: 50px;">
                     <p class="formtext" style="flex: 25%;"><label for="name">Name</label></p>
