add images to about us branches

--- a/src/about.html
+++ b/src/about.html
@@ -87,6 +87,7 @@
         </div>
         <div class="modal-body">
           <p style="text-align: center;">Welcome to Social branch! We serve as the bridge between all the branches and focus on creating a community through fun, club-wide events. Some of our most popular events include dumpling making, mahjong nights, game socials, food fundraisers, and various other activities like gingerbread-making during Christmas season.</p>
+          <img src="/images/social/cupcake.png" class="aboutusimage">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -103,6 +104,7 @@
           </div>
           <div class="modal-body"> 
             <p style="text-align: center;">Welcome to Tutoring! We are in charge of overseeing our peer tutoring program as well as running Chinese Corner. We offer one-on-one tutoring to people of all skill levels, and pair them with our incredible tutor team! Additionally, we host weekly Chinese Corners where you can come practice your Chinese at our various conversation tables. We have a new theme each week, and it's a great way to practice as you're surrounded by other learners and our tutors!</p>           
+            <img src="/images/tutoring/boba.png" class="aboutusimage">
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -119,6 +121,7 @@
         </div>
         <div class="modal-body">  
           <p style="text-align: center;">Welcome to Performance Branch! We host CLAID's annual Chinese New Year Showcase through different styles of dances organized by CLAID, as well as inviting other RSOs to perform with us. Throughout the year we have weekly practices, fun performance socials, dance workshops, and more!</p>
+          <img src="/images/performance/wushu.png" class="aboutusimage">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -135,6 +138,7 @@
           </div>
           <div class="modal-body"> 
             <p style="text-align: center;">Welcome to Cultural! We organize events with a focus on learning about the various aspects of Chinese Culture. From language to food to history to fashion, we want to make sure each person - regardless of ethnicity - can walk out of our events learning something new! Some events we host include the annual Mid-Autumn Festival, Calligraphy Workshops, and musical performances.</p>           
+            <img src="/images/cultural/taste of china.jpg" class="aboutusimage">
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
