--- a/src/points.html
+++ b/src/points.html
@@ -23,30 +23,24 @@
     <!--check in stuff-->
     <div>
         <!--<form action="form.js" method="PUT">-->
-        <form>
+        <form id="check_in">
             <div style="display: flex; margin-left: 425px;">
                 <div style="padding-right: 50px;">
                     <p class="formtext"><label for="name">Name</label></p>
-                    <input type="text" name="name" id="name" style="border-radius: 6px">
+                    <input type="text" name="name" id="name" style="border-radius: 6px" required>
                 </div>
                 <div style="padding-right: 50px;">
                     <p class="formtext"><label for="email">Email</label></p>
-                    <input type="text" name="email" id="email" style="border-radius: 6px">
+                    <input type="text" name="email" id="email" style="border-radius: 6px" required>
                 </div>
                 <div>
                     <p class="formtext"><label for="eventcode">Event code</label></p>
-                    <input type="text" name="eventcode" id="eventcode" style="border-radius: 6px">
+                    <input type="text" name="eventcode" id="eventcode" style="border-radius: 6px" required>
                 </div>
             </div>
             <br>
             <br>
-            <button type="submit" value="Submit" class="formbutton"  onclick="errormessage()">Check In</button>
-            <script>
-                function errormessage() {
-                    alert("Check in was unsuccessful");
-                    location.reload();
-                }
-            </script>
+            <button type="submit" value="Submit" class="formbutton">Check In</button>
         </form>
     </div>
 
