add js reference in points.html

--- a/src/points.html
+++ b/src/points.html
@@ -21,8 +21,8 @@
     </ul>
     <h2 class="pointheader">Check in!</h2>
     <!--check in stuff-->
+    
     <div>
-        <!--<form action="form.js" method="PUT">-->
         <form id="check_in">
             <div style="display: flex; margin-left: 425px;">
                 <div style="padding-right: 50px;">
@@ -76,5 +76,6 @@
         <p class="ftext" style="float:right; margin-right: 30px;">Contact Us</p>
     </footer>
 
+    <script src="form.js"></script>
 </body>
 </html>
