--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p class="maintext">We welcome everybody of all majors, cultures, and interests!</p>
 
     <div class="contactbox">
-        <p class="contacttext"><b>Email:</b>      claiduiuc@gmail.com<button type="button" class="contactbutton" onclick="location.href='connect.html';">CONTACT</button></p>
+        <p class="contacttext"><b>Email:</b>      claiduiuc@gmail.com<button type="button" class="contactbutton" onclick="location.href='src/connect.html';">CONTACT</button></p>
     </div>
     <div>
         <div>
