add client and server side stuff

--- a/src/points.html
+++ b/src/points.html
@@ -76,6 +76,7 @@
         <p class="ftext" style="float:right; margin-right: 30px;">Contact Us</p>
     </footer>
 
+    <!--client side js code-->
     <script src="form.js"></script>
 </body>
 </html>
