--- a/src/connect.html
+++ b/src/connect.html
@@ -40,12 +40,12 @@
     <br>
     <div>
         <form method="post" action="https://formspree.io/f/mqkonnbr">
-            <div style="display: flex; margin-left: 530px;">
-                <div style="padding-right: 50px;">
+            <div style="display: flex; margin: auto; width: 25%;">
+                <div style="padding-right: 10px;">
                     <p class="formtext" style="flex: 25%;"><label for="name">Name</label></p>
                     <textarea type="name" name="name"></textarea>
                 </div>
-                <div>
+                <div style="padding-left: 10px;">
                     <p class="formtext" style="flex: 25%;"><label for="email">Email</label></p>
                     <textarea type="email" name="email"></textarea>
                 </div>
