--- a/src/connect.html
+++ b/src/connect.html
@@ -40,17 +40,17 @@
     <br>
     <div>
         <form method="post" action="https://formspree.io/f/mqkonnbr">
-            <div style="display: flex; margin: auto; width: 25%;">
-                <div style="padding-right: 10px;">
-                    <p class="formtext" style="flex: 25%;"><label for="name">Name</label></p>
+            <div style="margin: auto; width: 100%;">
+                <div>
+                    <p class="formtext"><label for="name">Name</label></p>
                     <textarea type="name" name="name"></textarea>
                 </div>
-                <div style="padding-left: 10px;">
-                    <p class="formtext" style="flex: 25%;"><label for="email">Email</label></p>
+                <div>
+                    <p class="formtext"><label for="email">Email</label></p>
                     <textarea type="email" name="email"></textarea>
                 </div>
             </div>
-            <p class="formtext" style="flex: 25%;"><label for="message">Message</label></p>
+            <p class="formtext"><label for="message">Message</label></p>
             <textarea id="message" style="width: 500px; height: 200px; margin: auto;" name="message"></textarea>
             <br>
             <br>
