update points form styling

--- a/src/points.html
+++ b/src/points.html
@@ -24,12 +24,12 @@
     
     <div>
         <form id="check_in">
-            <div style="display: flex; margin-left: 425px;">
-                <div style="padding-right: 50px;">
+            <div style="margin: auto;">
+                <div>
                     <p class="formtext"><label for="name">Name</label></p>
                     <input type="text" name="name" id="name" style="border-radius: 6px" required>
                 </div>
-                <div style="padding-right: 50px;">
+                <div>
                     <p class="formtext"><label for="email">Email</label></p>
                     <input type="text" name="email" id="email" style="border-radius: 6px" required>
                 </div>
