add chinese corner date

--- a/src/get_involved.html
+++ b/src/get_involved.html
@@ -40,7 +40,7 @@
             <div class="innerbox tooltip">
                 <h2>Chinese Corner</h2>
                 <img src="/images/miscellaneous/corner.png" class="innerbox">
-                <span class="tooltiptext">Mondays in the Illini Union Basement!</span>
+                <span class="tooltiptext">Mondays 7-9PM in the Illini Union Basement!</span>
             </div>
         </div>
         <div class="getinvolvedbox">
