--- a/src/connect.html
+++ b/src/connect.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/main_style.css">
     <!--comfortaa font-->
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ba9933f02b165786f46a3d3f6/26f0f07c91ed11cfd4b235214.js");</script>
 </head>
 <body>
     <!--nav bar-->
@@ -35,6 +36,7 @@
             <a href = "mailto: claiduiuc@gmail.com" target="_blank"><img src="/images/email.gif" class="connectdiv" style="width: 200px; height: 200px; object-fit: cover;"></a>
         </div>
     </div>
+
     <!--feedback form-->
     <h2 class="headers">Or contact us here!</h2>
     <br>
